# KunQuant-rs

./: .gitignore  Cargo.toml  README.md  build.rs  generate_test_factor.py  run_tests.sh
examples/: alpha001_example.rs  simple_example.rs  streaming_example.rs
src/: batch.rs  buffer.rs  error.rs  executor.rs  ffi.rs  lib.rs  library.rs  stream.rs
tests/: alpha001_test.rs  integration_test.rs  ndarray_test.rs  stream_debug_test.rs  stream_test.rs
